[package]
name = "pusta"
description = "a dotfiles framework focussing on modularity"
version = "0.2.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Serialization and stuff
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.87"
serde_with = "3.0.0"
typetag = "0.2.3"

# Using these because i am too lazy to implement them myself
dyn-clone = "1.0.10"
dyn-eq = "0.1.2"

# Logging
anyhow = "1.0.66"
log = { version = "0.4.17", features = ["std"]}
chrono = "0.4.22"

# CLI and flex
clap = { version = "4.0.18", features = ["derive"]}
colored = "2.0.0"

# Filesystem
shellexpand = "3.1.0"
chksum = "0.1.0-rc5"
