[package]
name = "pusta"
description = "a dotfiles framework focussing on modularity"
version = "0.2.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Serialization and stuff
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = "0.9.*"
serde_json = "1.0.*"
serde_with = "3.0.*"
typetag = "0.2.*"

# Using these because i am too lazy to implement them myself
dyn-clone = "1.0.*"
dyn-eq = "0.1.*"

# Logging
anyhow = "1.0.*"
log = { version = "0.4.*", features = ["std"]}
chrono = "0.4.*"

# CLI and flex
clap = { version = "4.2", features = ["derive"]}
colored = "2.0"

# Filesystem
shellexpand = "3.1.*"
chksum = "0.1.0-rc5"
