[package]
name = "pusta"
description = "a dotfiles framework focussing on modularity"
version = "0.3.1"

edition = "2021"

# normal binary which is used by the user
[[bin]]
name = "pusta"
path = "src/main.rs"

[dependencies]
# Serialization and stuff
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = "0.9.*"
serde_json = "1.0.*"
serde_with = "3.3.0"
typetag = "0.2.*"
uuid = { version = "1.5.0", features = ["v4", "serde"]}

# Using these because i am too lazy to implement them myself
dyn-clone = "1.0.*"
dyn-eq = "0.1.*"

# Logging
anyhow = "1.0.*"
log = { version = "0.4.*", features = ["std"]}
chrono = "0.4.*"

# CLI and flex
clap = { version = "4.2", features = ["derive"]}
colored = "2.0"

# Filesystem
shellexpand = "3.1.*"
chksum = { version = "0.2.1", default-features = false, features = ["sha1"] }
whoami = "1.4.1"
fs_extra = "1.3.0"

# Variables
codespan-reporting = "0.11.1"
regex = { version = "1.9.5", features = [] }
lazy-regex = "3.0.2"